src/test/ui/error-codes/E0416.stderr
error[E0416]: identifier `x` is bound more than once in the same pattern
  --> $DIR/E0416.rs:13:13
   |
LL |         (x, x) => {} //~ ERROR E0416
   |             ^ used in a pattern more than once

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0416"
